Fixed overflow issue on BackgroundParallax

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,6 +99,7 @@ html {
   overflow-x: hidden;
 }
 body {
+  position: relative;
   font-family: "Source Sans Pro", Arial, sans-serif;
   background: var(--darkblue);
 }
